@startuml
!pragma layout smetana
skinparam dpi 240
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam classFontSize 15
skinparam packageFontSize 18
skinparam ArrowFontSize 12
skinparam classBackgroundColor<<adapter>> #FFF3BF
skinparam classBorderColor<<adapter>> #B68A00
skinparam classBackgroundColor<<model>> #E2F5E6
skinparam classBorderColor<<model>> #3B8B4F
hide empty methods
title Family Tasks - Adapter Classes
caption Current adapter classes and their model dependencies.

package "adapters" #FFF3BF {
class ParentDashboardTaskAdapter <<adapter>> {
  - items : List<AssignedTask>
}
class "ParentDashboardTaskAdapter.TaskViewHolder" as ParentTaskViewHolder <<adapter>>
class "ManageChildrenActivity.ChildListAdapter" as ChildListAdapter <<adapter>>
class "ParentTaskTemplateActivity.TemplateListAdapter" as TemplateListAdapter <<adapter>>
}

package "models" #E2F5E6 {
class AssignedTask <<model>>
class TaskTemplate <<model>>
}

ParentDashboardTaskAdapter ..> AssignedTask
ParentDashboardTaskAdapter +-- ParentTaskViewHolder
TemplateListAdapter ..> TaskTemplate
@enduml
